feat: Support Aggregate Failures

--- a/config/default.yml
+++ b/config/default.yml
@@ -26,3 +26,7 @@ Style/Documentation:
 
 Style/MethodCalledOnDoEndBlock:
   Enabled: true
+
+# RSpec
+RSpec/MultipleExpectations:
+  AggregateFailuresByDefault: true
