--- a/config/default.yml
+++ b/config/default.yml
@@ -6,13 +6,13 @@ require:
 AllCops:
   TargetRubyVersion: 2.6
 
-Lint/UnusedMethodArgument:
-  AllowUnusedKeywordArguments: true
-
 # Allow longer line length for bigger screens
-Metrics/LineLength:
+Layout/LineLength:
   Max: 120
   StyleGuide: 'https://github.com/mikian/itsmycargo/blob/master/docs/Guide.adoc#maximum-line-length'
+
+Lint/UnusedMethodArgument:
+  AllowUnusedKeywordArguments: true
 
 # Allow Ignoring filename requirements for initializers
 Naming/FileName:
