feat: allow more lines for rspec

--- a/config/default.yml
+++ b/config/default.yml
@@ -30,3 +30,6 @@ Style/MethodCalledOnDoEndBlock:
 # RSpec
 RSpec/MultipleExpectations:
   AggregateFailuresByDefault: true
+
+RSpec/ExampleLength:
+  Max: 8
