--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -23,27 +23,4 @@ jobs:
         git config --local user.name "ItsMyCargo"
     - run: bundle
     - run: rake bump:patch
-    - run: git push
-
-    # - name: Publish to RubyGems
-    #   run: |
-    #     mkdir -p $HOME/.gem
-    #     touch $HOME/.gem/credentials
-    #     chmod 0600 $HOME/.gem/credentials
-    #     printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-    #     gem build *.gemspec
-    #     gem push *.gem
-    #   env:
-    #     GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_AUTH_TOKEN}}
-    #
-    # - name: Publish to GPR
-    #   run: |
-    #     mkdir -p $HOME/.gem
-    #     touch $HOME/.gem/credentials
-    #     chmod 0600 $HOME/.gem/credentials
-    #     printf -- "---\n:github: Bearer ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-    #     gem build *.gemspec
-    #     gem push --KEY github --host https://rubygems.pkg.github.com/${OWNER} *.gem
-    #   env:
-    #     GEM_HOST_API_KEY: ${{secrets.GPR_AUTH_TOKEN}}
-    #     OWNER: itsmycargo
+    - run: git push --follow-tags
