--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -2,9 +2,6 @@ name: Ruby Gems
 
 on:
   push:
-    paths-ignore:
-      - 'lib/rubocop/itsmycargo/version.rb'
-      - 'CHANGELOG.md'
     branches:
       - master
 
@@ -41,9 +38,8 @@ jobs:
         mkdir -p $HOME/.gem
         touch $HOME/.gem/credentials
         chmod 0600 $HOME/.gem/credentials
-        printf -- "---\n:github: Bearer ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+        echo ":github: Bearer GH_TOKEN" >> $HOME/.gem/credentials
         gem build *.gemspec
-        gem push --KEY github --host https://rubygems.pkg.github.com/${OWNER} *.gem
+        gem push --key github --host https://rubygems.pkg.github.com/itsmycargo *.gem
       env:
-        GEM_HOST_API_KEY: ${{secrets.GPR_AUTH_TOKEN}}
-        OWNER: itsmycargo
+        GH_TOKEN: ${{secrets.GPR_AUTH_TOKEN}}
