--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -38,7 +38,7 @@ jobs:
         mkdir -p $HOME/.gem
         touch $HOME/.gem/credentials
         chmod 0600 $HOME/.gem/credentials
-        echo ":github: Bearer GH_TOKEN" >> $HOME/.gem/credentials
+        printf -- "---\n:github: Bearer ${GH_TOKEN}\n" >> $HOME/.gem/credentials
         gem build *.gemspec
         gem push --key github --host https://rubygems.pkg.github.com/itsmycargo *.gem
       env:
