feat: prevent pending specs

--- a/config/rspec.yml
+++ b/config/rspec.yml
@@ -37,6 +37,9 @@ RSpec/LetBeforeExamples:
 RSpec/MissingExampleGroupArgument:
   Enabled: true
 
+RSpec/Pending:
+  Enabled: true
+
 RSpec/ReceiveCounts:
   Enabled: true
 
