--- a/config/base.yml
+++ b/config/base.yml
@@ -9,6 +9,11 @@ require:
 inherit_gem:
   standard: config/base.yml
 
+AllCops:
+  TargetRubyVersion: 2.6
+  DisabledByDefault: false
+  Exclude: []
+
 # Allow longer line length for bigger screens
 Layout/LineLength:
   Max: 120
@@ -17,3 +22,7 @@ Layout/LineLength:
 Style/Documentation:
   Enabled: false
   StyleGuide: 'https://github.com/itsmycargo/rubocop-itsmycargo/blob/master/docs/Guide.adoc#classmodule-documentation'
+
+# Disable Rubocop disable comments (widely mis-used)
+Style/DisableCopsWithinSourceCodeDirective:
+  Enabled: true
